--- a/index.html
+++ b/index.html
@@ -5,27 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>swarajshejul@portfolio:~$</title>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
-      background: #000;
-      color: #00ff00;
+      width: 100%;
+      height: 100%;
       font-family: 'Fira Mono', monospace;
-      font-size: 16px;
-      line-height: 1.5;
+      background: #000;
+      overflow: hidden;
+      color: #00ff90;
+    }
+    #tsparticles {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
     }
     .terminal {
+      position: relative;
+      z-index: 1;
       padding: 2rem;
+      background: rgba(0, 0, 0, 0.8);
+      max-width: 800px;
+      margin: 5rem auto;
+      border-radius: 10px;
+      box-shadow: 0 0 20px #00ff90aa;
     }
     .prompt::before {
       content: "swaraj shejul@portfolio:~$ ";
-      color: #00ff00;
+      color: #00ff90;
     }
     .blinking-cursor {
       display: inline-block;
       width: 10px;
-      background-color: #00ff00;
+      background-color: #00ff90;
       animation: blink 1s steps(1) infinite;
     }
     @keyframes blink {
@@ -38,9 +53,21 @@
       color: #00ffff;
       text-decoration: none;
     }
+    a:hover {
+      text-decoration: underline;
+    }
+    ul {
+      list-style-type: none;
+      padding-left: 1rem;
+    }
+    ul li::before {
+      content: "➜ ";
+      color: #00ffff;
+    }
   </style>
 </head>
 <body>
+  <div id="tsparticles"></div>
   <div class="terminal">
     <div class="section">
       <div class="prompt">whoami</div>
@@ -79,5 +106,73 @@
 
     <div class="prompt"><span class="blinking-cursor"></span></div>
   </div>
+
+  <script>
+    tsParticles.load("tsparticles", {
+      background: {
+        color: {
+          value: "#000"
+        }
+      },
+      fpsLimit: 60,
+      interactivity: {
+        events: {
+          onHover: {
+            enable: true,
+            mode: "repulse"
+          },
+          resize: true
+        },
+        modes: {
+          repulse: {
+            distance: 100,
+            duration: 0.4
+          }
+        }
+      },
+      particles: {
+        color: {
+          value: "#00ff90"
+        },
+        links: {
+          color: "#00ff90",
+          distance: 150,
+          enable: true,
+          opacity: 0.5,
+          width: 1
+        },
+        collisions: {
+          enable: false
+        },
+        move: {
+          direction: "none",
+          enable: true,
+          outModes: {
+            default: "bounce"
+          },
+          random: false,
+          speed: 2,
+          straight: false
+        },
+        number: {
+          density: {
+            enable: true,
+            area: 800
+          },
+          value: 80
+        },
+        opacity: {
+          value: 0.5
+        },
+        shape: {
+          type: "circle"
+        },
+        size: {
+          value: { min: 1, max: 5 }
+        }
+      },
+      detectRetina: true
+    });
+  </script>
 </body>
 </html>
