--- a/index.html
+++ b/index.html
@@ -73,17 +73,15 @@
       flex: 1;
     }
 
-    .video-section video {
+    .video-section {
       width: 100%;
-      height: 100%;
-      border-radius: 8px;
+      height: 400px; /* Set equal size for video section */
     }
 
     .putty-window {
       flex: 1;
-      min-width: 300px;
-      max-width: 100%;
-      height: 100%;
+      width: 100%;
+      height: 400px; /* Set equal size for PuTTY window */
       border: 2px solid #ccc;
       box-shadow: 0 0 8px #fff;
       display: flex;
@@ -213,6 +211,60 @@
       width: 100vw;
       height: 100vh;
       background: #000;
+    }
+
+    /* Mobile responsiveness */
+    @media (max-width: 768px) {
+      .main-content {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .putty-window,
+      .video-section {
+        height: 300px; /* Adjust the height for mobile */
+      }
+
+      .putty-header .title {
+        font-size: 12px;
+      }
+
+      .toggle-btn {
+        font-size: 12px;
+        padding: 4px 10px;
+      }
+
+      .travel-summary {
+        font-size: 12px;
+      }
+
+      .travel-summary button {
+        font-size: 12px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .profile-section img {
+        width: 100px;
+        height: 100px;
+      }
+
+      .profile-section h2 {
+        font-size: 18px;
+      }
+
+      .profile-section p {
+        font-size: 12px;
+      }
+
+      .putty-window,
+      .video-section {
+        height: 250px; /* Further adjust for smaller screens */
+      }
+
+      .putty-header .title {
+        font-size: 10px;
+      }
     }
   </style>
 </head>
